<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuncha_person_"
            android:textColor="@color/font_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_1"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xingzheng_area_"
            android:textColor="@color/font_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_1"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuncha_plan_"
            android:textColor="@color/font_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/xuncha_plan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_1"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/dimen_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuncha_river_"
            android:textColor="@color/font_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/xuncha_river"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_1"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xuncha_situation_"
            android:textColor="@color/font_1"
            android:textSize="14sp" />

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:divider="@drawable/table_v_divider"
            android:orientation="vertical"
            android:showDividers="middle|beginning|end">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/table_h_divider"
                android:orientation="horizontal"
                android:showDividers="middle|beginning|end">

                <TextView
                    style="@style/TextStyle"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="河道整治工作进展情况"
                    android:textSize="14sp" />

                <TextView
                    style="@style/TextStyle"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="计划推进"
                    android:textSize="14sp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</LinearLayout>
