<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/river_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_5dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dimen_10dp"
    android:paddingRight="@dimen/dimen_10dp"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_myriver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_mark"
            android:drawablePadding="@dimen/dimen_10dp"
            android:gravity="left|center_vertical"
            android:text="@string/text_my_river"
            android:textColor="@color/font_1"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/river_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/tv_myriver"
            android:layout_weight="2"
            android:drawablePadding="@dimen/dimen_10dp"
            android:drawableRight="@drawable/ic_right_arrow"
            android:gravity="right|center_vertical"
            android:text="@string/text_all"
            android:textColor="@color/font_1"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_2dp"
        android:background="@color/activity_bg_default" />

    <!--<com.hywy.luanhzt.view.MyRecycleView-->
    <!--android:id="@+id/river_recy"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->
    <LinearLayout
        android:id="@+id/titlename_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activity_bg_default"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="@dimen/dimen_10dp"
        android:paddingTop="5dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/titlename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/reach_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <com.hywy.luanhzt.view.GridViewForScrollView
        android:id="@+id/gridview"
        android:layout_width="match_parent"
        android:background="@color/activity_bg_default"
        android:layout_height="wrap_content"
        android:horizontalSpacing="@dimen/dimen_3dp"
        android:numColumns="2"
        android:scrollbars="none"
        android:verticalSpacing="@dimen/dimen_3dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_i"
            android:gravity="center"
            android:text="@string/river_yuan"
            android:textColor="@color/font_1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/dimen_2dp"
            android:layout_height="match_parent"
            android:background="@color/activity_bg_default" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_ii"
            android:gravity="center"
            android:text="@string/river_jinan"
            android:textColor="@color/font_1"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
