<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_btn_default"
    android:orientation="vertical"
    android:padding="@dimen/dimen_10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:src="@drawable/icon_start" />

        <TextView
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/material_color_green_300"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:src="@drawable/icon_end" />

        <TextView
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/material_color_red_300"
            android:textSize="14sp" />
    </LinearLayout>
    <include layout="@layout/line_defalt_h" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:gravity="center_vertical"
            android:text="@string/xuncha_person_"
            android:textColor="@color/font_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/tv3"
            android:gravity="center_vertical"
            android:textColor="@color/font_1"
            android:textSize="15sp"
            tools:text="@string/see_locate" />
    </RelativeLayout>

    <include layout="@layout/line_defalt_h" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:gravity="center_vertical"
            android:text="@string/xuncha_river_"
            android:textColor="@color/font_gray"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/xuncha_river"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_toRightOf="@+id/tv4"
            android:gravity="center_vertical"
            android:textColor="@color/font_1"
            android:textSize="15sp"
            tools:text="@string/see_locate" />
    </RelativeLayout>
</LinearLayout>
